bug(headers):resize and align right
make hearder links align right, and reduse height of nav Bar.

[finishes #166076311]

--- a/css/adminDashboard.css
+++ b/css/adminDashboard.css
@@ -66,7 +66,7 @@ footer>a {
     top: 0;
     z-index: 700; */
     width: 100%;
-    height: 87px;
+    height: 60px;
     background-color: indigo;
     color: #ECEEE8;
 }
@@ -95,7 +95,7 @@ footer>a {
 }
 #navHead {
     box-sizing: border-box;
-    flex-basis: 20%;
+    flex-basis: 10%;
     text-align: center;
     display: flex;
     justify-content: flex-start;
@@ -126,16 +126,16 @@ footer>a {
     box-sizing: border-box;
     display: flex;
     text-align: center;
-    justify-content: space-around;
+    justify-content: flex-end;
     align-items: center;
-    flex-basis: 50%;
+    flex-basis: 70%;
 }
 #secondHead{
     display: flex;
     box-sizing: border-box;
     justify-content: flex-end;
     align-items: center;
-    flex-basis: 20%;
+    flex-basis: 10%;
 }
 #userImage{
     border: 2px solid white;
@@ -310,25 +310,14 @@ footer>a {
     #repaymentTable{
         width: 100%;
     }
-    #navHead {
-        padding-left: 20px;
-        flex-basis: 25%;
-    }
-    #firstHead{
-        flex-basis: 50%;
-    }
-    #secondHead{
-        padding-right: 20px;
-        flex-basis: 25%;
-    }
 }
 @media(max-width: 1000px){
     #firstHead{
-        flex-basis: 50%;
+        flex-basis: 90%;
     }
     #secondHead{
         padding-right: 20px;
-        flex-basis: 50%;
+        flex-basis: 10%;
     }
     #navHead {
         display: none;
@@ -547,7 +536,7 @@ footer{
         margin-top: 87px;
     }
     #userDashbord{
-        margin-top: 87px;
+        margin-top: 60px;
     }
 }
 /* admin dashboard*/
