--- a/css/adminPostRepayment.css
+++ b/css/adminPostRepayment.css
@@ -129,7 +129,7 @@ footer>a {
     z-index: 700; */
     width: 100%;
     justify-content: space-around;
-    height: 87px;
+    height: 60px;
     background-color: indigo;
     color: #ECEEE8;
 }
@@ -176,7 +176,7 @@ footer>a {
 }
 #navHead {
     box-sizing: border-box;
-    flex-basis: 20%;
+    flex-basis: 10%;
     text-align: center;
     display: flex;
     justify-content: flex-start;
@@ -205,12 +205,12 @@ footer>a {
 }
 #firstHead{
     text-align: center;
-    justify-content: space-around;
+    justify-content: flex-end;
     box-sizing: border-box;
     display: flex;
     padding-left: 20px;
     align-items: center;
-    flex-basis: 50%;
+    flex-basis: 75%;
 }
 #secondHead{
     padding-right: 30px;
@@ -218,7 +218,7 @@ footer>a {
     box-sizing: border-box;
     justify-content: flex-end;
     align-items: center;
-    flex-basis: 20%;
+    flex-basis: 10%;
 }
 #userImage{
     border: 2px solid white;
@@ -389,28 +389,17 @@ footer>a {
     #repaymentTable{
         width: 100%;
     }
-    #navHead {
-        padding-left: 20px;
-        flex-basis: 25%;
-    }
-    #firstHead{
-        flex-basis: 50%;
-    }
-    #secondHead{
-        padding-right: 20px;
-        flex-basis: 25%;
-    }
 }
 @media(max-width: 1000px){
     #navHead {
         display: none;
     }
     #firstHead{
-        flex-basis: 50%;
+        flex-basis: 90%;
     }
     #secondHead{
         padding-right: 20px;
-        flex-basis: 50%;
+        flex-basis: 10%;
     }
     #navUser{
         display: block;
@@ -773,6 +762,6 @@ width: 80%;
 }
 @media(max-width:1000px){
     #userDashbord{
-        margin-top: 87px;
+        margin-top: 60px;
     }
 }
